<resources>
    <string name="app_name">FoodOrderApplication</string>
    <string name="next">Next</string>
    <string name="enjoy_restuarant_quality_meals_nat_home">Enjoy Restuarant Quality Meals\nat Home</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="continue_with">Continue With</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="food_waves">Food Waves</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="logo">logo</string>
    <string name="design_by_nnilesh">Design by\nNilesh</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
</resources>