<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="136dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/g10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/yeonsungregular"
        android:text="@string/food_waves"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/latobold"
        android:text="@string/login_to_your_account"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/icon__15_"
        android:drawablePadding="10sp"
        android:paddingStart="10dp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/textView14"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="@id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock_01"
        android:drawablePadding="8sp"
        android:elevation="10dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latoregular"
        android:text="@string/continue_with"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googlebttn"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/google_icon_2"
        android:fontFamily="@font/latoregular"
        android:paddingStart="10dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:drawableStart="@drawable/facebook_3_1"
        android:fontFamily="@font/latoregular"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/googlebttn"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbttn"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenshapebtn"
        android:fontFamily="@font/latoregular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googlebttn" />

    <TextView
        android:id="@+id/dnthavebttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbttn" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeonsungregular"
        android:text="Design By\nNilesh"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dnthavebttn"
        app:layout_constraintVertical_bias="0.722" />
</androidx.constraintlayout.widget.ConstraintLayout>